<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ll"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/placeholder_face_big"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@+id/civProfile"
            android:layout_toRightOf="@+id/civProfile"
            android:orientation="vertical"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                tools:text="@string/ramesh_n"

                android:textColor="@android:color/black"
                android:textSize="@dimen/dimen_16" />

            <TextView
                android:id="@+id/tvOrderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-5dp"
                android:fontFamily="@font/poppins_regular"
                tools:text="@string/order_id_34513"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimen_10" />

            <TextView
                android:id="@+id/tvOrderedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/_3_1_kms_7_min_away"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimen_10" />



            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/_3_1_kms_7_min_away"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimen_10" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"

            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMinAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llTime"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/mrp"
                    android:layout_gravity="end"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/font_12" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvCurrentPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="@string/rs_symbol"
                            android:textSize="@dimen/font_12"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvMRPPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/dimen_4"
                            android:fontFamily="@font/poppins_semibold"
                            android:textAllCaps="true"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/font_12"
                            tools:text="@string/finaln" />

                    </LinearLayout>





            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/closed"
                    android:layout_gravity="end"
                    android:textAllCaps="true"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/font_12" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/rs_symbol"
                        android:textSize="@dimen/font_12"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tvClosedPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:fontFamily="@font/poppins_semibold"
                        tools:text="@string/finaln"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/font_12" />

                </LinearLayout>




            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/llCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llMinAmt"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"

            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:visibility="gone">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/rupees"
                android:textColor="@android:color/black"
                android:textSize="12sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/_12345_78"
                android:textColor="@android:color/black"
                android:textSize="14sp" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/llStatusBtn"
            android:layout_width="@dimen/dimen_120"
            android:layout_height="30dp"
            android:layout_below="@+id/llCurrent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            app:cardBackgroundColor="@color/green"
            app:cardCornerRadius="@dimen/dimen_15"
            app:cardElevation="@dimen/dimen_4"
            android:layout_margin="@dimen/dimen_5">

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="4dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/won"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/font_12"
                tools:ignore="UnusedAttribute" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_5"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dimen_32"
        android:layout_marginEnd="@dimen/dimen_32"
        android:background="@color/lightgray"/>


</LinearLayout>