<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ll"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/placeholder_face_big"
            app:civ_border_color="@color/purple"
            app:civ_border_width="@dimen/dimen_1"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@+id/civProfile"
            android:layout_toRightOf="@+id/civProfile"
            android:orientation="vertical"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/ramesh_n"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvOrderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-5dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/order_id"
                android:textColor="@color/blackn"
                android:textSize="10sp" />


            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_regular"
                tools:text="@string/_3_1_kms_7_min_away"
                android:textColor="@color/blackn"

                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"

            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMinAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llTime"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/mrp"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/font_12" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/rs_symbol"
                        android:textSize="@dimen/font_12"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tvMRPPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/rs"
                        android:textSize="@dimen/font_12"
                        tools:text="2500.00"
                        android:textStyle="bold" />

                </LinearLayout>




                <TextView
                    android:id="@+id/tvMyBid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/my_bid"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_12" />

                <TextView
                    android:id="@+id/tvRemainingTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="@font/poppins_semibold"
                    android:textAllCaps="true"
                    android:textColor="@color/colorOrange"
                    android:textSize="@dimen/font_12"
                    tools:text="15:30" />

                <TextView
                    android:id="@+id/tvRemainingLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/remaining_lowercase"
                    android:layout_marginTop="-5dp"
                    android:textAllCaps="false"
                    android:textColor="@color/colorOrange"
                    android:textSize="@dimen/font_10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"

                    android:layout_marginStart="3dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/current"
                    android:textAllCaps="true"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/font_12" />




                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/rs_symbol"
                        android:textSize="@dimen/font_12"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tvCurrentPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/rs"
                        android:textSize="@dimen/font_12"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:background="@drawable/bg_gray_border_curved"
                    android:paddingStart="@dimen/dimen_16"
                    android:paddingTop="@dimen/dimen_3"
                    android:paddingEnd="@dimen/dimen_16"
                    android:id="@+id/llMyAmount"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dimen_3"


                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/rupees"
                        android:textColor="@color/green"
                        android:layout_gravity="center"
                        android:textSize="@dimen/font_12"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvMyAmount"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_3"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_12"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/green"
                        tools:text="" />

                </LinearLayout>




                <androidx.cardview.widget.CardView
                    android:id="@+id/cvRemainingAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_4"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_3"
                    app:cardElevation="@dimen/dimen_4"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:paddingStart="@dimen/dimen_16"
                        android:paddingTop="@dimen/dimen_3"
                        android:paddingEnd="@dimen/dimen_16"
                        android:paddingBottom="@dimen/dimen_2"

                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/rupees"
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tvOtherPharmacyAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/dimen_1"
                            android:textSize="@dimen/font_12"
                            android:layout_marginLeft="@dimen/dimen_3"
                            android:fontFamily="@font/poppins_semibold"
                            android:textColor="@android:color/white"
                            tools:text="\u20b9 125.00" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/llCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llMinAmt"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:visibility="gone">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/rupees"
                android:textColor="@android:color/black"
                android:textSize="12sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/_12345_78"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/dimen_32"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginEnd="@dimen/dimen_32"
        android:background="@color/lightgray" />
</LinearLayout>